[package]
name = "chaos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3"
leptos = "0.3"
log = "0.4.19"
serde_json = "1.0.99"
wasm-bindgen-futures = "0.4.37"
wasm-logger = "0.2.0"
wasm-sockets = "1.0.0"

[dependencies.futures-timer]
version = "3.0.2"
features = ["wasm-bindgen"]

[dependencies.leptos_router]
version = "0.3"
features = ["csr"]

[dependencies.serde]
version = "1.0"
features = [
    "derive"
]

[dependencies.web-sys]
version = "0.3"
features = [
    "CloseEvent",
    "ErrorEvent",
    "ReadableStream",
    "Storage",
    "Window",
]
