[package]
name = "chaos"
version = "0.1.0"
edition = "2021"

[dependencies]
comrak = "0.18"
console_error_panic_hook = "0.1"
js-sys = "0.3"
log = "0.4"
reqwest = "0.11"
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
wasm-sockets = "1.0"

[dependencies.futures-timer]
version = "3.0"
features = ["wasm-bindgen"]

[dependencies.leptos]
version = "0.4"
features = [
    "nightly",
    "csr",
]

[dependencies.leptos_router]
version = "0.4"
features = ["csr"]

[dependencies.serde]
version = "1.0"
features = [
    "derive"
]

[dependencies.web-sys]
version = "0.3"
features = [
    "CloseEvent",
    "ErrorEvent",
    "ReadableStream",
    "Storage",
    "Window",
]
